# ohs-backend

./: .aidigestignore  .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  database.env  docker-compose.yml  init-garage.sh  otel-collector-config.yaml  package.json  pnpm-lock.yaml  setup-db.sh  tailwind.config.cjs  test-connection.sh  test_i18n.md
.cursor/rules/: idiomatic-rust.mdc
.sqlx/: query-01d1b8957597426e6897dd270ea5f380221446f92188661b59526702c038238d.json  query-20e8edb28533f1de3b03aa99146c98e6bf734bdf58ae40ebdd7a369c3be3eb2b.json  query-5551f46d6d0d91874ed21be0dbebeb4e8266ff48e05813e6d4fd5be96b76302f.json  query-be1a0bdc974d39781d977a95486758a69917946d240582d32d6b6c9a1d8a0341.json  query-e05d217965975c40ea14b27e775ce7549200d1335931e7e46927861a3a281dab.json  query-e075a37e401e81851ca3ddaac1e84f77dfc732ec359c2372b341db1d03d840c0.json  query-e3b3edae10934fceaa7eb14ca0a0359f1337e723bd26da9f4f185b77c4a9d993.json
coturn/: turnserver.conf
docs/: i18n.md  observability-stack.md  telemetry.md
docs/database_schemas/: 20231001000002_Initialize.sql  20231001000002_Initialize_cleaned.sql  20231001000002_Initialize_fixed.sql  database_schema.mermaid  db-schema-diagram.mermaid  db-schema.sql  gemini_schema.sql  o4-mini_schema.sql
docs/requirements/: requirements.md
examples/: telemetry_demo.rs
garage-config/: garage.toml
locales/en/: common.ftl  common.ftl.template
locales/tr/: common.ftl  common.ftl.template
migrations/: 20231001000000_init_schema.sql  20231001000001_seed_data.sql
postgres-data/: postmaster.pid
postgres-data/base/1/: 1259  2619  2619_vm  2696  2840  2841  pg_internal.init
postgres-data/base/16384/: pg_internal.init
postgres-data/base/5/: pg_internal.init
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init
redis-data/: dump.rdb
src/: app.rs  app_state.rs  config.rs  error.rs  main.rs  telemetry.rs
src/db/: error.rs  mod.rs
src/db/models/: appointment.rs  communication.rs  company.rs  company_assignment.rs  mod.rs  notification.rs  professional_availability.rs  quiz.rs  risk_analysis.rs  safety_report.rs  subscription.rs  system_setting.rs  tenant.rs  training.rs  training_enrollment.rs  training_material.rs  training_session.rs  user.rs  user_profile.rs  user_push_token.rs  user_tenant_context_role.rs
src/db/repositories/: user_repository.rs
src/i18n/: fluent_loader.rs  helpers.rs  language.rs  localizer.rs  mod.rs
src/middleware/: language.rs  mod.rs  tracing.rs
src/modules/: mod.rs
src/modules/admin/: handlers.rs  routes.rs
src/modules/i18n/: example_handler.rs  handlers.rs  mod.rs  routes.rs
src/websocket/: mod.rs  routes.rs  ws_handler.rs
static/css/: main.css
templates/admin/: dashboard.html
templates/public/: layout.html  login.html
