[package]
name = "ohs-backend"
version = "0.1.0"
edition = "2024"
authors = ["Emre YILDIZ <emre.yildiz.dev@hotmail.com"]
description = "Multi-tenant Occupational Health and Safety Backend Application"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum = "0.8.4"
dotenv = "0.15.0"
once_cell = "1.21.3"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
