[package]
name = "ohs-backend"
version = "0.1.0"
edition = "2024"
authors = ["Emre YILDIZ <emre.yildiz.dev@hotmail.com"]
description = "Multi-tenant Occupational Health and Safety Backend Application"

[dependencies]
anyhow = "1.0.98"
askama = "0.14.0"
axum = { version = "0.8.4", features = ["ws"] }
chrono = { version = "0.4.41", features = ["serde"] }
dotenvy = "0.15.7"
futures-util = "0.3.31"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
tower-http = { version = "0.6.4", features = ["fs"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
sqlx = { version = "0.8.5", features = ["runtime-tokio", "tls-rustls", "postgres", "macros", "json", "uuid", "time", "migrate"] }
uuid = { version = "1.16.0", features = ["v7", "serde"] }
time = { version = "0.3.41", features = ["serde"] }
secrecy = { version = "0.10.3", features = ["serde"] }
argon2 = "0.5.3"
validator = { version = "0.20.0", features = ["derive"] }
thiserror = "2.0.12"
rand = "0.9.1"

# OpenTelemetry dependencies - simplified working setup
opentelemetry = "0.30.0"
opentelemetry_sdk = { version = "0.30.0", features = ["rt-tokio", "metrics"] }
opentelemetry-otlp = "0.30.0"
tracing-opentelemetry = "0.30.0"
tower = "0.5"

[[example]]
name = "telemetry_demo"
path = "examples/telemetry_demo.rs"
